Add fake names controller and route
