# public/openapi.yml
@@ -9,7 +9,7 @@ info:
   license:
     name: MIT License
     url: https://mit-license.org/
-  version: 1.3.0
+  version: 1.3.1
 externalDocs:
   description: Find out more about Commlink
   url: https://commlink.digitaldarkness.com/about
@@ -1122,6 +1122,41 @@ paths:
                 type: object
       tags:
         - expanse
+  /fakes/names:
+    get:
+      summary: Generate some fake names.
+      operationId: fake-names-index
+      parameters:
+        - name: quantity
+          in: query
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Collection of fake names.
+          content:
+            application/json:
+              example:
+                data:
+                  - Christian Waters
+                  - Francisco Bailey
+                  - Raymond Gomez
+                links:
+                  self: '/fakes/names'
+                  root: '/'
+              schema:
+                properties:
+                  data:
+                    items:
+                      type: string
+                    type: array
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+      tags:
+        - interactivity
   /roll:
     options:
       summary: Slack roll health check
